RESOLVED FIXED279796
[IsDeprecatedWeakRefSmartPointerException] PendingDownload should not be a smart pointer exception
https://bugs.webkit.org/show_bug.cgi?id=279796
Summary [IsDeprecatedWeakRefSmartPointerException] PendingDownload should not be a sm...
Geoffrey Garen
Reported 2024-09-16 17:11:18 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-16 17:11:42 PDT
Geoffrey Garen
Comment 2 2024-09-16 17:14:59 PDT
EWS
Comment 3 2024-09-17 13:13:18 PDT
Committed 283792@main (bc74bcf9e05d): <https://commits.webkit.org/283792@main> Reviewed commits have been landed. Closing PR #33732 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.