[IsDeprecatedWeakRefSmartPointerException] PendingDownload should not be a smart pointer exception https://bugs.webkit.org/show_bug.cgi?id=279796 rdar://136113361

Reviewed by Ryosuke Niwa.

* Source/WTF/wtf/RefCountedWithWeakPtr.h: Added. For now, this class is just
a convenience to do the right thing by default without extra typing. In the
future I plan to optimize by combining the two separate implementations.

* Source/WebKit/NetworkProcess/Downloads/PendingDownload.h: Make it refcounted.

Canonical link: https://commits.webkit.org/283792@main